fix issue where footer wrapped onto next line

--- a/packages/nouns-webapp/src/components/Footer/Footer.module.css
+++ b/packages/nouns-webapp/src/components/Footer/Footer.module.css
@@ -2,9 +2,11 @@
   display: flex;
   flex: 1;
 }
+
 .container {
   display: flex;
 }
+
 .footerSignature {
   margin: auto auto 0 auto;
   font-family: 'PT Root UI' !important;
@@ -38,8 +40,8 @@
 }
 
 @media (max-width: 992px) {
-  .footerSignature {
-    font-size: 16px;
+  .footerSignature a {
+    font-size: 14px;
   }
 }
 
